Society/src/iklim/society/parser/MyNewGrammar.java
/* Generated By:JavaCC: Do not edit this line. MyNewGrammar.java */
package iklim.society.parser;
import iklim.society.node.*;
import iklim.society.visitor.*;
import java.util.LinkedList;

public class MyNewGrammar implements MyNewGrammarConstants {
  public static void main(String args []) throws ParseException
  {
    MyNewGrammar parser = new MyNewGrammar(System.in);
    while (true)
    {
      System.out.println("Reading from standard input...");
      System.out.print("Enter an expression like \u005c"1+(2+3)*4;\u005c" :");
      try
      {
        MyNewGrammar.Component();
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        MyNewGrammar.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }

  static final public ASTStatement Component() throws ParseException {
  ASTStatement statement;
  BlockStatement b = new BlockStatement();
  LinkedList statements = new LinkedList();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case IF:
      case TRUE:
      case TARGET:
      case WORKER:
      case TARGET_VALUE:
      case THIS:
      case INTEGER_LITERAL:
      case IDENTIFIER:
      case LPAREN:
      case LBRACE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      statement = Statement();
      statements.add(statement);
    }
    jj_consume_token(0);
    b.setStatements(statements);
    {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement Statement() throws ParseException {
  ASTStatement statement;
  ASTExpression exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      statement = Block();
      break;
    case IF:
      statement = IfStatement();
      break;
    case FALSE:
    case TRUE:
    case TARGET:
    case WORKER:
    case TARGET_VALUE:
    case THIS:
    case INTEGER_LITERAL:
    case IDENTIFIER:
    case LPAREN:
      statement = StatementExpression();
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public BlockStatement Block() throws ParseException {
  BlockStatement block = new BlockStatement();
  LinkedList statements = new LinkedList();
  ASTStatement s;
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case IF:
      case TRUE:
      case TARGET:
      case WORKER:
      case TARGET_VALUE:
      case THIS:
      case INTEGER_LITERAL:
      case IDENTIFIER:
      case LPAREN:
      case LBRACE:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      s = Statement();
        statements.add(s);
    }
    jj_consume_token(RBRACE);
    block.setStatements(statements);
    {if (true) return block;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement StatementExpression() throws ParseException {
  ASTExpression var;
  Token t;
  String operator;
  ASTExpression expression;
    if (jj_2_3(2)) {
      if (jj_2_1(2)) {
        var = Element();
        t = jj_consume_token(INCR);
      } else if (jj_2_2(2)) {
        var = Element();
        t = jj_consume_token(DECR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      IncrementStatement i = new IncrementStatement(t.image, (Variable) var);
      {if (true) return i;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case TRUE:
      case TARGET:
      case WORKER:
      case TARGET_VALUE:
      case THIS:
      case INTEGER_LITERAL:
      case IDENTIFIER:
      case LPAREN:
        var = Element();
        operator = AssignmentOperator();
        expression = Expression();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    AssignmentStatement assign = new AssignmentStatement(operator, (Variable) var, expression);
    {if (true) return assign;}
    throw new Error("Missing return statement in function");
  }

  static final public IfStatement IfStatement() throws ParseException {
  ASTExpression cond;
  ASTStatement then;
  ASTStatement els;
  IfStatement i;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    cond = Expression();
    jj_consume_token(RPAREN);
    then = Statement();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      els = Statement();
      i = new IfStatement(cond, then, els);
      {if (true) return i;}
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    i = new IfStatement(cond, then);
    {if (true) return i;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression Expression() throws ParseException {
  ASTExpression exp;
    if (jj_2_4(2)) {
      exp = ConditionalExpression();
    {if (true) return exp;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case TRUE:
      case TARGET:
      case WORKER:
      case TARGET_VALUE:
      case THIS:
      case BANG:
      case PLUS:
      case MINUS:
      case INTEGER_LITERAL:
      case IDENTIFIER:
      case LPAREN:
        exp = AdditiveExpression();
    {if (true) return exp;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String AssignmentOperator() throws ParseException {
  String operator;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      operator = "=";
      break;
    case STARASSIGN:
      jj_consume_token(STARASSIGN);
      operator = "*=";
      break;
    case SLASHASSIGN:
      jj_consume_token(SLASHASSIGN);
      operator = "/=";
      break;
    case 49:
      jj_consume_token(49);
      operator = "%=";
      break;
    case PLUSASSIGN:
      jj_consume_token(PLUSASSIGN);
      operator = "+=";
      break;
    case MINUSASSIGN:
      jj_consume_token(MINUSASSIGN);
      operator = "-=";
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return operator;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression ConditionalExpression() throws ParseException {
    if (jj_2_5(2)) {
    ASTExpression b;
      b = ConditionalOrExpression();
    {if (true) return b;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case TRUE:
      case TARGET:
      case WORKER:
      case TARGET_VALUE:
      case THIS:
      case BANG:
      case PLUS:
      case MINUS:
      case INTEGER_LITERAL:
      case IDENTIFIER:
      case LPAREN:
    ASTExpression condition;
    ASTExpression trueExpression;
    ASTExpression falseExpression;
        condition = ConditionalOrExpression();
        jj_consume_token(50);
        trueExpression = Expression();
        jj_consume_token(51);
        falseExpression = ConditionalExpression();
    ConditionalExpression conditionalExpression = new ConditionalExpression((BooleanExpression) condition, trueExpression, falseExpression);
    {if (true) return conditionalExpression;}
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression ConditionalOrExpression() throws ParseException {
  ASTExpression e;
  ASTExpression newE;
  BooleanExpression newnewE;
    e = ConditionalAndExpression();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SC_OR:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      jj_consume_token(SC_OR);
      newE = ConditionalAndExpression();
      newnewE = new BooleanExpression();
      newnewE.setLeft(e);
      newnewE.setRight(newE);
      newnewE.setOperator("||");
      e = newnewE;
    }
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression ConditionalAndExpression() throws ParseException {
  ASTExpression e;
  ASTExpression newE;
  BooleanExpression newnewE;
    e = EqualityExpression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SC_AND:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      jj_consume_token(SC_AND);
      newE = EqualityExpression();
      newnewE = new BooleanExpression();
      newnewE.setLeft(e);
      newnewE.setRight(newE);
      newnewE.setOperator("&&");
      e = newnewE;
    }
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression EqualityExpression() throws ParseException {
  ASTExpression left;
  ASTExpression right = null;
  String operator = null;
  boolean flag = false;
    left = RelationalExpression();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
      case NE:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        jj_consume_token(EQ);
        operator = "==";
        break;
      case NE:
        jj_consume_token(NE);
        operator = "!=";
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = RelationalExpression();
      flag = true;
    }
    if (flag)
    {
      BooleanExpression expression = new BooleanExpression(operator, left, right);
      {if (true) return expression;}
    }
    else
    {
      {if (true) return left;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression RelationalExpression() throws ParseException {
  ASTExpression left;
  ASTExpression right = null;
  String operator = null;
  boolean flag = false;
    left = AdditiveExpression();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GT:
      case LT:
      case LE:
      case GE:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LT:
        jj_consume_token(LT);
        operator = "<";
        break;
      case GT:
        jj_consume_token(GT);
        operator = ">";
        break;
      case LE:
        jj_consume_token(LE);
        operator = "<=";
        break;
      case GE:
        jj_consume_token(GE);
        operator = ">=";
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = AdditiveExpression();
      flag = true;
    }
    if (flag)
    {
      BooleanExpression expression = new BooleanExpression(operator, left, right);
      {if (true) return expression;}
    }
    else
    {
      {if (true) return left;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression AdditiveExpression() throws ParseException {
  ASTExpression e;
  ASTExpression newE;
  OperationExpression newnewE;
  String operator;
    e = MultiplicativeExpression();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        operator = "+";
        break;
      case MINUS:
        jj_consume_token(MINUS);
        operator = "-";
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      newE = MultiplicativeExpression();
      newnewE = new OperationExpression();
      newnewE.setLeft(e);
      newnewE.setRight(newE);
      newnewE.setOperator(operator);
      e = newnewE;
    }
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression MultiplicativeExpression() throws ParseException {
  ASTExpression firstE;
  OperationExpression e = null;
  ASTExpression newE;
  OperationExpression newnewE;
  String operator;
  int flag = 0;
    firstE = UnaryExpression();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
      case SLASH:
      case 52:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
        jj_consume_token(STAR);
        operator = "*";
        break;
      case SLASH:
        jj_consume_token(SLASH);
        operator = "/";
        break;
      case 52:
        jj_consume_token(52);
        operator = "%";
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      newE = UnaryExpression();
      if (flag == 0)
      {
        newnewE = new OperationExpression();
        newnewE.setLeft(firstE);
        newnewE.setRight(newE);
        newnewE.setOperator(operator);
        e = newnewE;
        flag++;
      }
      else
      {
        newnewE = new OperationExpression();
        newnewE.setLeft(e);
        newnewE.setRight(newE);
        newnewE.setOperator(operator);
        e = newnewE;
      }
    }
    if (flag == 0)
    {
      {if (true) return firstE;}
    }
    else
    {
      {if (true) return e;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression UnaryExpression() throws ParseException {
  ASTExpression e;
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e = UnaryExpression();
      String sign;
      sign = String.valueOf(t.image);
      if (sign.equals("+"))
      {
        {if (true) return e;}
      }
      else
      {
        MinusExpression m = new MinusExpression(e);
        {if (true) return m;}
      }
      break;
    case FALSE:
    case TRUE:
    case TARGET:
    case WORKER:
    case TARGET_VALUE:
    case THIS:
    case BANG:
    case INTEGER_LITERAL:
    case IDENTIFIER:
    case LPAREN:
      e = UnaryExpressionNotPlusMinus();
      {if (true) return e;}
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression UnaryExpressionNotPlusMinus() throws ParseException {
  ASTExpression e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BANG:
      jj_consume_token(BANG);
      e = UnaryExpression();
    NotExpression n = new NotExpression(e);
    {if (true) return n;}
      break;
    case FALSE:
    case TRUE:
    case TARGET:
    case WORKER:
    case TARGET_VALUE:
    case THIS:
    case INTEGER_LITERAL:
    case IDENTIFIER:
    case LPAREN:
      e = Element();
    {if (true) return e;}
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression Element() throws ParseException {
  ASTExpression exp;
  ASTValue value;
  Token t;
  int counter = 0;
  Variable variable;
  BaseVariable returnBase = null;
  String name;
  BaseVariable base = null;
  BaseVariable newBase = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FALSE:
    case TRUE:
    case INTEGER_LITERAL:
      value = Literal();
    {if (true) return value;}
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      exp = Expression();
      jj_consume_token(RPAREN);
    {if (true) return exp;}
      break;
    case TARGET_VALUE:
      jj_consume_token(TARGET_VALUE);
    variable = new Variable("TargetValue");
    {if (true) return variable;}
      break;
    case TARGET:
    case WORKER:
    case THIS:
    case IDENTIFIER:
    Token type = new Token();
    type.image = "default";
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TARGET:
      case WORKER:
      case THIS:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TARGET:
          type = jj_consume_token(TARGET);
          break;
        case WORKER:
          type = jj_consume_token(WORKER);
          break;
        case THIS:
          type = jj_consume_token(THIS);
          break;
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(DOT);
        break;
      default:
        jj_la1[22] = jj_gen;
        ;
      }
      t = jj_consume_token(IDENTIFIER);
    variable = new Variable(String.valueOf(t.image));
    counter++;
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_9;
        }
        jj_consume_token(DOT);
        t = jj_consume_token(IDENTIFIER);
      if (counter == 1)
      {
        name = variable.getName();
        variable = new Variable(String.valueOf(t.image));
        base = new BaseVariable(name, variable);
        returnBase = base;
        counter++;
      }
      else
      {
        name = base.getVar().getName();
        variable = new Variable(String.valueOf(t.image));
        newBase = new BaseVariable(name, variable);
        base.setVar(newBase);
        newBase = base;
      }
      }
    TargetVariable target;
    WorkerVariable worker;
    ThisVariable thi;
    if (counter == 1)
    {
      switch (String.valueOf(type.image))
      {
        case "target" :
        target = new TargetVariable(variable);
        {if (true) return target;}
        case "worker" :
        worker = new WorkerVariable(variable);
        {if (true) return worker;}
        case "this" :
        thi = new ThisVariable(variable);
        {if (true) return thi;}
        default :
        {if (true) return variable;}
      }
    }
    else
    {
      switch (String.valueOf(type.image))
      {
        case "target" :
        target = new TargetVariable(returnBase);
        {if (true) return target;}
        case "worker" :
        target = new TargetVariable(returnBase);
        {if (true) return target;}
        case "this" :
        target = new TargetVariable(returnBase);
        {if (true) return target;}
        default :
        {if (true) return returnBase;}
      }
    }
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTValue Literal() throws ParseException {
  ASTValue v;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      Token t;
      t = jj_consume_token(INTEGER_LITERAL);
      v = new IntValue(Integer.valueOf(t.image));
      break;
    case FALSE:
    case TRUE:
      v = BooleanLiteral();
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanValue BooleanLiteral() throws ParseException {
  BooleanValue v;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
      jj_consume_token(TRUE);
    v = new BooleanValue(true);
    {if (true) return v;}
      break;
    case FALSE:
      jj_consume_token(FALSE);
    v = new BooleanValue(false);
    {if (true) return v;}
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
